Break down HTTPCache.Result metric by resource type

We'd like to know how often different resource types are cached and
revalidated, so this CL adds cache pattern metrics for common resource
types. Note that the resource type is a guess based on the URL's
path. There will be many missed resources but I anticipate the
fraction of false positives will be low.

BUG=596569

Review URL: https://codereview.chromium.org/1824713002

Cr-Commit-Position: refs/heads/master@{#383319}

Former-commit-id: 5152e48e43339dbe3013b647c00bfff4867eb087